# websocket-refresh-auth

./: Cargo.toml  Dockerfile  Readme.md
.github/workflows/: main.yml
src/: auth.rs  index.html  jwt.rs  main.rs
static/: index.html
