[package]
name = "websocket-refresh-auth"
version = "1.0.0"
authors = ["Esse Swann <esseswann@gmail.com>"]
edition = "2018"

[[bin]]
name = "websocket_refresh_auth"
path = "src/main.rs"

[dependencies]
jsonwebtoken = "7"
actix = "0.10.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"

env_logger = "0.8"
serde = "1"
serde_json = "1"